--- a/package.json
+++ b/package.json
@@ -10,15 +10,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.0",
+    "@angular/animations": "^17.3.12",
+    "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
-    "@angular/forms": "^17.3.0",
+    "@angular/forms": "^17.3.12",
+    "@angular/localize": "^17.3.12",
+    "@angular/material": "^17.3.10",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
-    "rxjs": "~7.8.0",
+    "@progress/kendo-angular-buttons": "^19.2.0",
+    "@progress/kendo-angular-common": "^19.2.0",
+    "@progress/kendo-angular-dropdowns": "^19.2.0",
+    "@progress/kendo-angular-excel-export": "^19.2.0",
+    "@progress/kendo-angular-grid": "^19.2.0",
+    "@progress/kendo-angular-inputs": "^19.2.0",
+    "@progress/kendo-angular-intl": "^19.2.0",
+    "@progress/kendo-angular-l10n": "^19.2.0",
+    "@progress/kendo-angular-label": "^19.2.0",
+    "@progress/kendo-angular-pdf-export": "^19.2.0",
+    "@progress/kendo-angular-popup": "^19.2.0",
+    "@progress/kendo-licensing": "^1.6.0",
+    "@progress/kendo-theme-default": "^11.2.0",
+    "@swimlane/ngx-charts": "^21.1.3",
+    "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
